styles/intro.css
#languageBox
{
	position: absolute;
	left: 50%;
	top: 2em;
	transform: translate(-50%, -50%);

	font-family: "Roboto Slab", serif;
	text-wrap: nowrap;
}

#languageBox button
{
	text-decoration: none;
	margin-left: 0.2em;
	margin-right: 0.2em;
	padding: 0.5em;
	padding-left: 0.8em;
	padding-right: 0.8em;

	/* background: linear-gradient(var(--color-light) 0%, rgba(0, 0, 0, 0) 100%); */
	color: var(--color-highlight);
	border: 1px solid var(--color-light);
	border-radius: 0.6em;
	background: none;

	font-family: "Roboto Slab", serif;
	font-size: 1.5vh;
}
#languageBox button:hover, #languageBox button:disabled
{
	background-color: var(--color-highlight);
	color: var(--color-dark);
}
#languageBox button:enabled
{
	cursor: pointer;
}
#languageBox button:disabled
{
	pointer-events: none;
}

#introBox
{
	position: absolute;
	left: 50%;
	top: 38vh;
	transform: translate(-50%, -50%);
	width: 95%;
	font-family: "Roboto Slab", serif;
	color: white;
	text-align: center;
}

.introBoxRefresh
{
	opacity: 0;
	animation: animFadeIn 1s ease-out forwards;
}

#introBox h1
{
	font-size: min(6vh, 350%);
	font-weight: bold;
	margin: 0;
}
#introBox h2
{
	font-size: min(3vh, 140%);
	font-weight: normal;
	margin: 0;
}

#title
{
	margin-bottom: 5vh;
}

#introBox button
{
	margin-top: 4vh;
	margin-bottom: auto;
	padding: 0;
	width: 34vh;
	height: 9vh;
	font-family: "Roboto Slab", serif;
	font-size: 3.5vh;
	border-radius: 3vh;
	border: none;
	background-color: rgba(255, 255, 255, 0.3);
}
#introBox button:disabled
{
	color: rgba(255, 255, 255, 0.3);
}
#introBox button:enabled
{
	/* background: linear-gradient(rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.4) 100%); */
	cursor: pointer;
	color: white;
	animation: animPulseButton 2s ease infinite;
	border: 0.4vh solid white;
}
#introBox button:hover:not([disabled])
{
	background-color: white;
	color: var(--color-dark);
}

@keyframes animPulseButton
{
	0% { box-shadow: 0 0 0 0px rgba(255, 255, 255, 0.7); }
	80%, 100% { box-shadow: 0 0 0 20px rgba(255, 255, 255, 0); }
}

#introBox #noScript
{
	width: min(300px, 90%);
	margin: auto;
	margin-top: 1.4em;
	padding: 10px;
	font-family: "Roboto Slab", serif;
	text-align: center;
	color: black;
	background-color: orange;
	border: 2px dashed black;
}

#playText
{
	margin: 0;
	text-align: center;
	font-weight: bold;
}

#playDescription
{
	margin: 0;
	font-size: 1.8vh;
}

#playSymbol
{
	position: relative;
}

/* https://www.w3schools.com/howto/howto_css_loader.asp */
#loadingSpinner
{
	position: absolute;
	left: -4.5vh;
	top: 0.3vh;
	width: 2vh;
	height: 2vh;
	border: 1vh solid rgba(255, 255, 255, 0.3);
	border-top: 1vh solid white;
	border-right: 1vh solid white;
	border-radius: 50%;
	animation: loadingSpin 2s linear infinite;
}
@keyframes loadingSpin
{
	0% { transform: rotate(0deg); }
	100% { transform: rotate(360deg); }
}

#playFullscreen
{
	position: absolute;
	left: -4.5vh;
	top: -0.5vh;
	width: 2vh;
	height: 2vh;
	font-family: Arial;
	font-size: 4vh;
}

#playFullscreen div
{
	position: absolute;
	top: 0;
}

#locIntroTitle1, #locIntroTitle2, #locIntroTitle3, #locIntroTitle4, #play, #noScript, #gameObject
{
	xopacity: 0;
	xanimation: animFadeIn 2s ease-out forwards;
}

#locIntroTitle1	 { animation-delay: 1.0s; }
#locIntroTitle2	 { animation-delay: 2.5s; }
#locIntroTitle3	 { animation-delay: 4.0s; }
#locIntroTitle4	 { animation-delay: 4.0s; }
#play, #noScript { animation-delay: 5.5s; }
#gameObject	 	 { animation-delay: 5.5s; }

